kubernetes/users/users.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: users
    labels:
        app.kubernetes.io/name: kubernetes-microservices
        app.kubernetes.io/component: users
spec:
    replicas: 1
    selector:
        matchLabels:
            app.kubernetes.io/name: kubernetes-microservices
            app.kubernetes.io/component: users
    template:
        metadata:
            labels:
                app.kubernetes.io/name: kubernetes-microservices
                app.kubernetes.io/component: users
        spec:
            containers:
                -   name: users
                    image: alexgudkov/kubernetes-microservices-users
                    imagePullPolicy: IfNotPresent
                    ports:
                        -   name: port-users
                            containerPort: 3002
                    resources:
                        limits:
                            memory: 512Mi
                            cpu: 250m
                        requests:
                            memory: 512Mi
                            cpu: 250m
            restartPolicy: Always
