kubernetes/users/users.deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: users
  labels:
    app.kubernetes.io/name: kubernetes-microservices
    app.kubernetes.io/component: users
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: kubernetes-microservices
      app.kubernetes.io/component: users
  template:
    metadata:
      labels:
        app.kubernetes.io/name: kubernetes-microservices
        app.kubernetes.io/component: users
    spec:
      containers:
        - name: users
          image: registry.gitlab.com/alex-gudkov/kubernetes-microservices/users:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3002
          resources:
            limits:
              memory: 2Gi
              ephemeral-storage: 1Gi
              cpu: 500m
            requests:
              memory: 2Gi
              ephemeral-storage: 1Gi
              cpu: 500m
      imagePullSecrets:
        - name: regcred
      restartPolicy: Always
