kubernetes/users/users.service.yaml
apiVersion: v1
kind: Service
metadata:
    name: users
    labels:
        app.kubernetes.io/name: kubernetes-microservices
        app.kubernetes.io/component: users
spec:
    type: ClusterIP
    selector: 
        app.kubernetes.io/name: kubernetes-microservices
        app.kubernetes.io/component: users
    ports:
        -   name: port-users
            protocol: TCP
            port: 80
            targetPort: port-users
