kubernetes/users/users.service.yml
apiVersion: v1
kind: Service
metadata:
  name: users
  labels:
    app.kubernetes.io/name: kubernetes-microservices
    app.kubernetes.io/component: users
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: kubernetes-microservices
    app.kubernetes.io/component: users
  ports:
    - protocol: TCP
      port: 3002
      targetPort: 3002
